# tripwire

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
data/: pricing.json
examples/: basic_usage.py  langchain_adapter.py  proxy_mode.py
src/tripwire/: __init__.py  budget.py  cli.py  detector.py  meter.py  notify.py  pricing.py  proxy.py
src/tripwire/adapters/: __init__.py  langchain.py
tests/: __init__.py  test_budget.py  test_detector.py  test_meter.py  test_notify.py  test_proxy.py
