[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tripwire"
version = "0.1.0"
description = "Agent Cost Circuit Breaker — kill runaway LLM loops before they blow your budget."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Nous Research" }]
keywords = ["llm", "agent", "budget", "cost", "circuit-breaker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.21"]

[project.scripts]
tripwire = "tripwire.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tripwire"]
